src/test/ui/issues/50000-59999/issue-52126-assign-op-invariance.stderr
error[E0597]: `line` does not live long enough
  --> $DIR/issue-52126-assign-op-invariance.rs:34:28
   |
LL |         let v: Vec<&str> = line.split_whitespace().collect();
   |                            ^^^^ borrowed value does not live long enough
...
LL |         acc += cnt2;
   |         --- borrow later used here
...
LL |     }
   |     - `line` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
